--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Venta de usados" />
-  <link rel="apple-touch-icon" href="./messirve.ico" />
+  <link rel="apple-touch-icon" href="./logo_messi.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
